--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<head> </head>
+<head>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/siimple@3.3.1/dist/siimple.min.css"
+  />
+</head>
 <body>
   <header>
     <div class="siimple-navbar">
