🏮⛷ Checkpoint ./src/index.html:8045597/7553

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,56 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/siimple@3.3.1/dist/siimple.min.css"
   />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <!-- Primary Meta Tags -->
+  <title>JSONsite</title>
+  <meta name="title" content="JSONsite" />
+  <meta
+    name="description"
+    content="JSONsite allows you to create a full SPA with one JSON file and free hosting."
+  />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="/" />
+  <meta property="og:title" content="JSONsite" />
+  <meta
+    property="og:description"
+    content="JSONsite allows you to create a full SPA with one JSON file and free hosting."
+  />
+  <meta property="og:image" content="" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="/" />
+  <meta property="twitter:title" content="JSONsite" />
+  <meta
+    property="twitter:description"
+    content="JSONsite allows you to create a full SPA with one JSON file and free hosting."
+  />
+  <meta property="twitter:image" content="" />
 </head>
 <body>
   <header>
     <div class="siimple-navbar">
       <a class="siimple-navbar-title">JSONsite</a>
       <div class="siimple--float-right">
-        <a class="siimple-navbar-item">Link 1</a>
+        <a
+          class="siimple-navbar-item"
+          href="https://github.com/jsonsite/jsonsite/edit/main/sites.js"
+          >Add your site</a
+        >
       </div>
     </div>
   </header>
+  <div class="siimple-content siimple-content--extra-large">
+    <div class="siimple-h1">JSONsite</div>
+    <p>
+      JSONsite allows you to create sites from one JSON file.<br /><br />(fulll
+      homepage coming soon!)
+    </p>
+  </div>
 </body>
