add more info to landing page

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
       <div class="siimple--float-right">
         <a
           class="siimple-navbar-item"
-          href="https://github.com/jsonsite/jsonsite/edit/main/sites.js"
-          >Add your site</a
+          href="https://github.com/jsonsite/jsonsite#readme"
+          >Learn more</a
         >
       </div>
     </div>
@@ -52,8 +52,9 @@
   <div class="siimple-content siimple-content--extra-large">
     <div class="siimple-h1">JSONsite</div>
     <p>
-      JSONsite allows you to create sites from one JSON file.<br /><br />(fulll
-      homepage coming soon!)
+      JSONsite allows you to create sites from one JSON file. See the
+      <a href="https://github.com/jsonsite/jsonsite#readme">GitHub repo</a> for
+      more info.<br /><br />(fulll homepage coming soon!)
     </p>
   </div>
 </body>
