switch to nunjucks

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <p>
       JSONsite allows you to create sites from one JSON file. See the
       <a href="https://github.com/jsonsite/jsonsite#readme">GitHub repo</a> for
-      more info.<br /><br />(fulll homepage coming soon!)
+      more info.<br /><br />(full homepage coming soon!)
     </p>
   </div>
 </body>
