🍰👘 Checkpoint ./templates/sitemap.html:8045597/960 ./views/index.html:8045597/244 ./sitemap.js:8045597/187

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <link
     rel="stylesheet"
@@ -50,6 +51,11 @@
           class="siimple-navbar-item siimple-link"
           href="https://jsonsite.glitch.me/site/demo/"
           >Demo</a
+        >
+        <a
+          class="siimple-navbar-item siimple-link"
+          href="https://jsonsite.glitch.me/sites"
+          >All sites</a
         >
       </div>
     </div>
@@ -117,3 +123,4 @@
     }
   </script>
 </body>
+</html>
