🐏🍂 Checkpoint ./templates/sitemap.html:8045597/4643 ./sitemap.js:8045597/838 ./app.js:8045597/155

--- a/pages/sites/index.html
+++ b/pages/sites/index.html
@@ -9,14 +9,14 @@
   <body>
     <div class="siimple-content siimple-content--extra-large">
       <div class="siimple-h1">JSONsite</div>
-      {% for site in sites %}
+      
       <div class="siimple-list" style="max-width:300px;">
         <div class="siimple-list-item">
-          <div class="siimple-list-title"><a href="https://jsonsite.js.org/site/{{ site.pubfrom }}">{{ site.title }}</a></div>
-          Publishes from <a href="{{ site.slug }}">{{ site.slug }}</a>
+          <div class="siimple-list-title"><a href="https://jsonsite.js.org/site/"></a></div>
+          Publishes from <a href="demo">demo</a>
         </div>
       </div><br>
-      {% endfor %}
+      
     </div>
   </body>
 </html>
